samples/good/Imports/aml-04-standard-explicit-path/imports.mf
<imports>
  <package name="com.aras.innovator.solution.ApplicationCore" path="ApplicationCore\Import" />
</imports>
