samples/bad/Imports/aml-05-invalid-root/imports.mf
<AML>
  <package name="com.aras.innovator.solution.PLM" path="PLM\Import" />
</AML>
